--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="box-border ">
+  <body class="box-border bg-neutral-950">
 
     <main class="container bg-neutral-950 h-screen w-full flex justify-center">
 
-      <div class="inner_container bg-gray-800 text-white max-h-96 max-w-96 grid ">
+      <div class="inner_container rounded-3xl box-border p-4 m-12 bg-gray-800 text-white max-h-96 max-w-96 grid ">
         <!-- inner container -->
 
         <div class="img-container " >
