--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="box-border bg-neutral-950">
-
     <main class="container bg-neutral-950 h-screen w-full flex justify-center">
-
-      <div class="inner_container rounded-3xl box-border p-4 m-12 bg-gray-800 text-white max-h-96 max-w-96 grid ">
+      <div
+        class="inner_container gap-0.5 rounded-3xl box-border p-4 m-12 bg-gray-800 text-white max-h-96 max-w-96 grid"
+      >
         <!-- inner container -->
 
-        <div class="img-container " >
-          <img src="img/icon-star.svg" alt="" />
+        <div class="img-container rounded-full bg-slate-700 w-9 h-9">
+          <img src="img/icon-star.svg" class="mx-auto my-2 d-block" />
         </div>
 
         <h1 class="">How did we do?</h1>
 
-        <p>
+        <p class="container">
           Please let us know how we did with your support request. All feedback
           is appreciated to help us improve our offering!
         </p>
 
-        <ul>
-          <li>1</li>
-          <li>2</li>
-          <li>3</li>
-          <li>4</li>
-          <li>5</li>
+        <ul class="flex justify-evenly">
+          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">1</li>
+          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">2</li>
+          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">3</li>
+          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">4</li>
+          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">5</li>
         </ul>
 
         <button class="submit-button">SUBMIT</button>
