--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
         <h1 class="">How did we do?</h1>
 
-        <p class="container">
+        <p class="text-wrap">
           Please let us know how we did with your support request. All feedback
           is appreciated to help us improve our offering!
         </p>
 
-        <ul class="flex justify-evenly">
+        <ul class="flex justify-evenly gap-1.5">
           <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">1</li>
           <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">2</li>
           <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">3</li>
