--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         </p>
 
         <ul class="flex justify-evenly gap-1.5">
-          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">1</li>
-          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">2</li>
-          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">3</li>
-          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">4</li>
-          <li class="rounded-full bg-slate-700 w-9 h-9 text-center p-1">5</li>
+          <li class="rounded-full btn bg-slate-700 w-9 h-9 text-center p-1">1</li>
+          <li class="rounded-full btn bg-slate-700 w-9 h-9 text-center p-1">2</li>
+          <li class="rounded-full btn bg-slate-700 w-9 h-9 text-center p-1">3</li>
+          <li class="rounded-full btn bg-slate-700 w-9 h-9 text-center p-1">4</li>
+          <li class="rounded-full btn bg-slate-700 w-9 h-9 text-center p-1">5</li>
         </ul>
 
-        <button class="submit-button">SUBMIT</button>
+        <button class="submit-button bg-orange-500 rounded-3xl  text-white btn">SUBMIT</button>
       </div>
     </main>
 
