--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <img src="img/icon-star.svg" class="mx-auto my-2 d-block" />
         </div>
 
-        <h1 class="">How did we do?</h1>
+        <h1 class="text-2xl">How did we do?</h1>
 
-        <p class="text-wrap">
+        <p class="text-wrap text-xl">
           Please let us know how we did with your support request. All feedback
           is appreciated to help us improve our offering!
         </p>
