--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- inner container -->
 
         <div class="img-container rounded-full bg-slate-700 w-9 h-9">
-          <img src="img/icon-star.svg" class="mx-auto my-2 d-block" />
+          <img src="img/icon-star.svg" class="mx-auto my-2 d-block" alt="star"/>
         </div>
 
         <h1 class="">How did we do?</h1>
