--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="box-border bg-neutral-950">
     <main class="container bg-neutral-950 h-screen w-full flex justify-center">
       <div
-        class="inner_container gap-0.5 rounded-3xl box-border p-4 m-12 bg-gray-800 text-white max-h-96 max-w-96 grid"
+        class="inner_container gap-0.5 rounded-3xl box-border p-4 m-12 bg-gray-800 text-white min-h-96 max-w-96 grid"
       >
         <!-- inner container -->
 
