--- a/thank_you_page.html
+++ b/thank_you_page.html
@@ -38,8 +38,8 @@
              </div>
 
            
-           <div>
-            <p class="text-wrap">We appreciate you taking the time to give a rating. if you ever need more support,don,t hesitatw to get in touch </p>
+           <div class="">
+            <p class="text-balance">We appreciate you taking the time to give a rating. if you ever need more support,don,t hesitatw to get in touch </p>
            
 
            </div>
