--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="img/icon-star.svg" class="mx-auto my-2 d-block" alt="star"/>
         </div>
 
-        <h1 class="">How did we do?</h1>
+        <h1 class="text-3xl">How did we do?</h1>
 
         <p class="text-wrap ">
           Please let us know how we did with your support request. All feedback
